--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Easy.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
-    <title>Frontend Kit</title>
+    <title>EasyCSS</title>
 </head>
 
 <body>
     <div class="hero">
-        <h1>FrontEnd Kit</h1>
+        <h1>EasyCSS</h1>
     </div>
     <main>
         <section class="menu">
@@ -30,156 +31,145 @@
             <div>
                 <div class="button">
                     <p>'.fade-out'</p>
-                    <a href="javascript:void(0)" class="fade-out">Fade Out</a>
+                    <a href="javascript:void(0)" class="easy-button fade-out">Fade Out</a>
                 </div>
                 <div class="button">
                     <p>'.fade-in'</p>
-                    <a href="javascript:void(0)" class="fade-in">Fade In</a>
+                    <a href="javascript:void(0)" class="easy-button fade-in">Fade In</a>
                 </div>
                 <div class="button">
                     <p>'.slide-left'</p>
-                    <a href="javascript:void(0)" class="slide-left">To Left</a>
+                    <a href="javascript:void(0)" class="easy-button slide-left">To Left</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-right'</p>
-                    <a href="javascript:void(0)" class="slide-right">To Right</a>
+                    <a href="javascript:void(0)" class=" easy-button slide-right">To Right</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-top'</p>
-                    <a href="javascript:void(0)" class="slide-top">To Top</a>
+                    <a href="javascript:void(0)" class="easy-button slide-top">To Top</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-bottom'</p>
-                    <a href="javascript:void(0)" class="slide-bottom">To Bottom</a>
+                    <a href="javascript:void(0)" class="easy-button slide-bottom">To Bottom</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-top-bottom'</p>
-                    <a href="javascript:void(0)" class="slide-top-bottom">Top-Bottom</a>
+                    <a href="javascript:void(0)" class="easy-button slide-top-bottom">Top-Bottom</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-left-right'</p>
-                    <a href="javascript:void(0)" class="slide-left-right">Left-Right</a>
+                    <a href="javascript:void(0)" class="easy-button slide-left-right">Left-Right</a>
                 </div>
                 <div class="button">
                     <p>'.slide-left-rounded'</p>
-                    <a href="javascript:void(0)" class="slide-left-rounded">Rounded Left</a>
+                    <a href="javascript:void(0)" class="easy-button slide-left-rounded">Rounded Left</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-right-rounded'</p>
-                    <a href="javascript:void(0)" class="slide-right-rounded">Rounded Right</a>
+                    <a href="javascript:void(0)" class="easy-button slide-right-rounded">Rounded Right</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-top-rounded'</p>
-                    <a href="javascript:void(0)" class="slide-top-rounded">Rounded Top</a>
+                    <a href="javascript:void(0)" class="easy-button slide-top-rounded">Rounded Top</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-bottom-rounded'</p>
-                    <a href="javascript:void(0)" class="slide-bottom-rounded">Rounded Bottom</a>
+                    <a href="javascript:void(0)" class="easy-button slide-bottom-rounded">Rounded Bottom</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-lr-rounded'</p>
-                    <a href="javascript:void(0)" class="slide-lr-rounded">Rounded Left-Right</a>
+                    <a href="javascript:void(0)" class="easy-button slide-lr-rounded">Rounded Left-Right</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-rotate-left'</p>
-                    <a href="javascript:void(0)" class="slide-rotate-left">Rotate Right</a>
+                    <a href="javascript:void(0)" class="easy-button slide-rotate-left">Rotate Right</a>
                 </div>
 
                 <div class="button">
                     <p>'.slide-rotate-right'</p>
-                    <a href="javascript:void(0)" class="slide-rotate-right">Rotate Right</a>
+                    <a href="javascript:void(0)" class="easy-button slide-rotate-right">Rotate Right</a>
                 </div>
             </div>
 
-            <h2>Skew on Hover</h2>
+            <h2>2D Transitions</h2>
             <div>
                 <div class=" button">
                     <p>'.skew-left'</p>
-                    <a href="javascript:void(0)" class="skew-left">To Left</a>
+                    <a href="javascript:void(0)" class="easy-button skew-left">To Left</a>
                 </div>
                 <div class="button">
                     <p>'.skew-right'</p>
-                    <a href="javascript:void(0)" class="skew-right">To Right</a>
+                    <a href="javascript:void(0)" class="easy-button skew-right">To Right</a>
                 </div>
                 <div class="button">
                     <p>'.skew-top'</p>
-                    <a href="javascript:void(0)" class="skew-top">To Top</a>
+                    <a href="javascript:void(0)" class="easy-button skew-top">To Top</a>
                 </div>
                 <div class="button">
                     <p>'.skew-bottom'</p>
-                    <a href="javascript:void(0)" class="skew-bottom">To Bottom</a>
+                    <a href="javascript:void(0)" class="easy-button skew-bottom">To Bottom</a>
                 </div>
-            </div>
-
-            <h2>Align on Hover</h2>
-            <div>
                 <div class="button">
                     <p>'.skewed-left'</p>
 
-                    <a href="javascript:void(0)" class="skewed-left">To Left</a>
+                    <a href="javascript:void(0)" class="easy-button skewed-left">To Left</a>
                 </div>
                 <div class="button">
                     <p>'.skewed-right'</p>
 
-                    <a href="javascript:void(0)" class="skewed-right">To Right</a>
+                    <a href="javascript:void(0)" class="easy-button skewed-right">To Right</a>
                 </div>
                 <div class="button">
                     <p>'.skewed-top'</p>
 
-                    <a href="javascript:void(0)" class="skewed-top">To Top</a>
+                    <a href="javascript:void(0)" class="easy-button skewed-top">To Top</a>
                 </div>
                 <div class="button">
                     <p>'.skewed-bottom'</p>
-                    <a href="javascript:void(0)" class="skewed-bottom">To Bottom</a>
+                    <a href="javascript:void(0)" class="easy-button skewed-bottom">To Bottom</a>
                 </div>
-
-            </div>
-            <h2>Shake on Hover</h2>
-            <div>
                 <div class="button">
                     <p>'.shake-x'</p>
-                    <a href="javascript:void(0)" class="shake-x">Shake X</a>
+                    <a href="javascript:void(0)" class="easy-button shake-x">Shake X</a>
                 </div>
                 <div class="button">
                     <p>'.shake-y'</p>
-                    <a href="javascript:void(0)" class="shake-y">Shake Y</a>
+                    <a href="javascript:void(0)" class="easy-button shake-y">Shake Y</a>
                 </div>
                 <div class="button">
                     <p>'.shake-rotate-left'</p>
-                    <a href="javascript:void(0)" class="shake-rotate-left">Rotate Left</a>
+                    <a href="javascript:void(0)" class="easy-button shake-rotate-left">Rotate Left</a>
                 </div>
                 <div class="button">
                     <p>'.shake-rotate-right'</p>
-                    <a href="javascript:void(0)" class="shake-rotate-right">Rotate Right</a>
+                    <a href="javascript:void(0)" class="easy-button shake-rotate-right">Rotate Right</a>
                 </div>
-            </div>
-            <h2>Scale on Hover</h2>
-            <div>
                 <div class="button">
                     <p>'.scale'</p>
-                    <a href="javascript:void(0)" class="scale">Scale Z</a>
+                    <a href="javascript:void(0)" class="easy-button scale">Scale Z</a>
                 </div>
                 <div class="button">
                     <p>'.scale-x'</p>
-                    <a href="javascript:void(0)" class="scale-x">Scale X</a>
+                    <a href="javascript:void(0)" class="easy-button scale-x">Scale X</a>
                 </div>
                 <div class="button">
                     <p>'.scale-y'</p>
-                    <a href="javascript:void(0)" class="scale-y">Scale Y</a>
+                    <a href="javascript:void(0)" class="easy-button scale-y">Scale Y</a>
                 </div>
                 <div class="button">
                     <p>'.scale-3d'</p>
-                    <a href="javascript:void(0)" class="scale-3d">Scale 3D</a>
+                    <a href="javascript:void(0)" class="easy-button scale-3d">Scale 3D</a>
                 </div>
             </div>
         </section>
@@ -201,12 +191,12 @@
         <h1>Inputs</h1>
         <section class="inputs" id="inputs,">
             <div class="input-text">
-                <p>'.input-text-1'</p>
-                <input type="text" name="" id="" class="input-text-1" placeholder="Digite seu Nome">
+                <p>'.input-text-light-1'</p>
+                <input type="text" name="" id="" class="easy-input input-text-light-1" placeholder="Digite seu Nome">
             </div>
             <div class="input-text">
-                <p>'.input-text-2'</p>
-                <input type="text" name="" id="" class="input-text-2" placeholder="Digite seu Nome">
+                <p>'.input-text-dark-1'</p>
+                <input type="text" name="" id="" class="easy-input input-text-dark-1" placeholder="Digite seu Nome">
             </div>
         </section>
     </main>
